--- a/index.html
+++ b/index.html
@@ -227,4 +227,7 @@ Web: <a href="https://cs.nju.edu.cn/gurong">https://cs.nju.edu.cn/gurong</a> <br
 	<div id="footer">
 		<div id="footer-text"></div>
 	</div>
+	<center>
+		<a href="https://clustrmaps.com/site/1bpzm" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=268&t=m&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I" /></a>
+	</center>
    </body></html>
