--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 <h1>王老师</h1>
 </div>
 <table class="imgtable"><tbody><tr><td>
-<img src="./Rong Gu(顾荣)_files/gurong-2.jpg" alt="alt text" width="191px" height="240px">&nbsp;</td>
-<td align="left"><h3>Research Associate Professor</h3>
-<p><a href="https://cs.nju.edu.cn/main.htm">Department of Computer Science and Technology</a><br>
-<a href="https://www.nju.edu.cn/">Nanjing University</a><br>
-163 Xianlin Avenue, Qixia District, Nanjing, Jiangsu 210023, China<br></p>
+	<!-- 个人图像 -->
+<img src="" alt="alt text" width="191px" height="240px">&nbsp;</td>
+<td align="left"><h3>职称r</h3>
+<p><a href="http://cise.njtech.edu.cn/">Department of Computer Science and Technology</a><br>
+<a href="http://www.njtech.edu.cn/">Nanjing Tech University</a><br>
+South Puzhu Road, 211816, Nanjing, China, 211816<br></p>
 <h3>Contact</h3>
-<p>Office: CS Building 313 <br>
-Email: gurong[at]nju.edu.cn <br>
-Web: <a href="https://cs.nju.edu.cn/gurong">https://cs.nju.edu.cn/gurong</a> <br></p>
+<p>Office:  <br>
+Email:  <br>
 </td></tr></tbody></table>
 <h2 id="Biography">Biography </h2>
 <p><i>Knowing yourself is the beginning of all wisdom. –Aristotle</i></p>
@@ -170,12 +170,14 @@ Web: <a href="https://cs.nju.edu.cn/gurong">https://cs.nju.edu.cn/gurong</a> <br
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
-<!-- <li><p>Big Data Processing System</p>
+<li><p>
+	
+</p>
 </li>
-<li><p>Efficient Cache/Index System</p>
+<li><p></p>
 </li>
-<li><p>Cloud/Edge Computing System</p>
-</li> -->
+<li><p></p>
+</li>
 </ul>
 <h2 id="News">News</h2>
 <div style="height: 380px; overflow: auto;">
@@ -186,38 +188,12 @@ Web: <a href="https://cs.nju.edu.cn/gurong">https://cs.nju.edu.cn/gurong</a> <br
 </div>
 
 
-<h2 id="Publications(Selected)">Publications(Selected) </h2>
+<h2 id="Publications(Selected)">Publications(Selected)</h2>
 <ol>
-<li><p><font class="publiction"><b>[VLDBJ'22]</b></font>A Pareto Optimal Bloom Filter Family with Hash Adaptivity (<i><b>VLDB Journal, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[ATC'22]</b></font>Meces: Latency-efficient Rescaling via Prioritized State Migration for Stateful Distributed Stream Processing Systems (<i><b>USENIX ATC, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[ICDE'22]</b></font>Fluid: Dataset Abstraction and Elastic Acceleration for Cloud-native Deep Learning Training Jobs (<i><b>IEEE ICDE, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'22]</b></font>Liquid: Intelligent Resource Estimation and Network-Efficient Scheduling for Deep Learning Jobs on Distributed GPU Clusters (<i><b>IEEE TPDS, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[WWW'22]</b></font>Seesaw Counting Filter: An Efficient Guardian for Vulnerable Negative Keys During Dynamic Filtering (<i><b>WWW, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[TMC'22]</b></font>Placing Wireless Chargers with Limited Mobility. IEEE Transactions on Mobile Computing (<i><b>IEEE TMC, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[ICDE'22]</b></font>Bamboo Filters: Make Resizing Smooth. Proc. of the 37th IEEE International Conference on Data Engineering(<i><b>IEEE ICDE, CCF-A</b></i>), to appear, 2022.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'21]</b></font>Towards Efficient Large-scale Interprocedural Program Static Analysis on Distributed Data-Parallel Computation. IEEE Transactions on Parallel and Distributed Systems (<i><b>IEEE TPDS, CCF-A</b></i>). Vol.32(4), 2021, pp. 867-883.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'21]</b></font>Towards Efficient Distributed SubgraphEnumeration via Backtracking-based Framework. IEEE Transactions on Parallel and Distributed Systems (<i><b>IEEE TPDS, CCF-A</b></i>). Vol.32(12), 2021, pp. 2953-2969.</p>
-</li>
-<li><p><font class="publiction"><b>[ICDE'21]</b></font>Hash Adaptive Bloom Filter. Proc. of the 37th IEEE International Conference on Data Engineering(<i><b>IEEE ICDE, CCF-A</b></i>), pp. 636-647, 2021.</p>
-</li>
-<li><p><font class="publiction"><b>[ICDE'19]</b></font>BENU: Distributed Subgraph Enumeration With Backtracking-based Framework. Proc. of the IEEE International Conference on Data Engineering (<i><b>IEEE ICDE, CCF-A</b></i>), pp. 136-147, Macau, April. 2019.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'19]</b></font>Efficient and Scalable Functional Dependency Discovery on Distributed Data-Parallel Platforms. IEEE Transactions on Parallel and Distributed Systems (<i><b>IEEE TPDS, CCF-A</b></i>). Vol.30(2), 2019, pp. 2663-2676.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'18]</b></font>Penguin: Efficient Query-based Framework for Replaying Large Scale Historical Data. IEEE Transactions on Parallel and Distributed Systems (<i><b>IEEE TPDS, CCF-A</b></i>). Vol.29(10), 2018, pp. 2333-2345.</p>
-</li>
-<li><p><font class="publiction"><b>[TPDS'17]</b></font>Improving Execution Concurrency of Large-Scale Matrix Multiplication on Distributed Data-Parallel Platforms. IEEE Transactions on Parallel and Distributed Systems (<i><b>IEEE TPDS, CCF-A</b></i>). Vol.28(9), 2017, pp. 2539-2552.</p>
+<li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
 </li>
 </ol>
-<!-- <p><a href="https://cs.nju.edu.cn/gurong/publications.html">See more info of my publications</a></p> -->
+<!-- <p><a href="">See more info of my publications</a></p> -->
 </td>
 </tr>
 </tbody></table>
