--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@ Email:  <br>
 <ol>
 <li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
 </li>
+<li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
+</li>
+<li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
+</li>
+<li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
+</li>
+<li><p><font class="publiction"><b>[发表平台'年份]</b></font>论文题目(<i><b>多个发表平台</b></i>), to appear, 发表年份.</p>
+</li>
 </ol>
 <!-- <p><a href="">See more info of my publications</a></p> -->
 </td>
