--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Email:  <br>
 		<div id="footer-text"></div>
 	</div>
 	<center>
-	<a href='https://clustrmaps.com/site/1bpzm'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=310&t=n&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I'/></a>
+		<a href='https://clustrmaps.com/site/1bpzm'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I'/></a>
 	</center>
 	
    </body></html>
