--- a/index.html
+++ b/index.html
@@ -222,13 +222,10 @@ Email:  <br>
 	</div>
 <center>
 	
-		<div id="clustrmaps-widget" style="width:40%">
-			<script type="text/javascript" id="clustrmaps" src="./index_profile/map_v2.js.txt"></script>
-	
-			<noscript><a href="https://clustrmaps.com/site/1bpzm" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I" /></a></noscript>
+		<div id="clustrmaps-widget" style="width:40%">	
+			<a href="https://clustrmaps.com/site/1bpzm" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I" /></a>
 
-	<!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
-			<noscript><a href='https://clustrmaps.com/site/1aa2l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff'/></a></noscript> -->
+
 		</div>        
 	      </center><p></p>
 	
