--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ Page generated 2022-06-14 17:02:01.
 </td>
 </tr>
 </tbody></table>
-
+<center>
+	<a href="https://clustrmaps.com/site/1bpzm" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I" /></a>
+</center>
 
 </body></html>
