--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Web: <a href="#"></a> <br></p>
 </li>
 </ul>
 
-<h2 id="#Publication(selected)">Publication(selected) </h2>
+<h2 id="Publication(selected)">Publication(selected) </h2>
 <ol>
 <li><p><font class="publiction"><b>[会议'年份]</b></font>论文题目 (<i><b>多个会议</b></i>), to appear, 年份.</p>
 </li>
