--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Web: <a href="#"></a> <br></p>
 <li><p>3</p>
 </li>
 </ul>
-<h2 id="news">News</h2>
+<h2 id="News">News</h2>
 <ul>
 <li><p><b>时间</b> 事件描述</p>
 </li>
