--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@ Page generated 2022-06-14 17:02:01.
 </td>
 </tr>
 </tbody></table>
+	<div id="footer">
+		<div id="footer-text" style="font-size: small;
+        border-top: 1px solid #c0c0c0;
+        padding-top: 0.1em;
+        margin-top: 4em;
+        color: #c0c0c0;"></div>
+	</div>
 <center>
 	<a href="https://clustrmaps.com/site/1bpzm" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=f60QK6aj7X972rHEgQHP2WVPLye39jzeFJuOqa7vG0I" /></a>
 </center>
